update with light and dark mood colors

--- a/BloodDonation/BloodDonation/ar.lproj/Localizable.strings
+++ b/BloodDonation/BloodDonation/ar.lproj/Localizable.strings
@@ -43,3 +43,5 @@
 "passwordNotCorrect" = "كلمة المرور غير صحيحة";
 "choocePictur" = "اختر الصورة التي تريدها من الخيارات التالية";
 "Empty" = "متاح";
+"Yes" = "نعم";
+"No" = "لا";
