--- a/BloodDonation/BloodDonation/en.lproj/Localizable.strings
+++ b/BloodDonation/BloodDonation/en.lproj/Localizable.strings
@@ -43,3 +43,5 @@
 "passwordNotCorrect" = "Password it's Not Currect";
 "choocePictur" = "where do you want to pick tour image frome?";
 "Empty" = "Empty";
+"Yes" = "Yes";
+"No" = "No";
