full project.. (En challah)

--- a/BloodDonation/BloodDonation/ar.lproj/Localizable.strings
+++ b/BloodDonation/BloodDonation/ar.lproj/Localizable.strings
@@ -45,3 +45,8 @@
 "Empty" = "متاح";
 "Yes" = "نعم";
 "No" = "لا";
+"thankYou" = "✅ شكرا لتبرعك ";
+"ok" = "حسناً";
+"back" = "رجوع";
+"youCant" = "🛑 نعتذر منك لاتستطيع التبرع انت غير مؤهل";
+"bloodDonation" = "التبرع بالدم";
