--- a/BloodDonation/BloodDonation/en.lproj/Localizable.strings
+++ b/BloodDonation/BloodDonation/en.lproj/Localizable.strings
@@ -45,3 +45,9 @@
 "Empty" = "Empty";
 "Yes" = "Yes";
 "No" = "No";
+"thankYout" = "Thank you for your blood donation";
+"thankYou" = "Thanks for donated ✅";
+"ok" = "OK";
+"back" = "Back";
+"youCant" = "Sorry You Can't Donation 🛑 ";
+"bloodDonation" = "Blood Donation";
